--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -2,7 +2,7 @@
   --white-bg-color: #FFFFFF;
   --gray-bg-color: #EFEFEF;
   --light-gray-bg-color: #FBFBFB;
-  --blue-bg-color: #E4EDFD;
+  --blue-bg-color: #3369F3;
   --light-blue-color: #E4EDFD;
 
   --black-color: #1E1E1E;
