--- a/src/styles/partials/chat.css
+++ b/src/styles/partials/chat.css
@@ -4,7 +4,7 @@
   display: flex;
   padding: 12px 0;
   display: flex;
-  border-bottom: 1px solid #EAEAEA;
+  border-bottom: 1px solid var(--light-gray-color);
 }
 
 .chat .avatar {
@@ -35,12 +35,12 @@
 
 .chat .container .timestamp {
   font-size: 9px;
-  color: #999999;
+  color: var(--dark-gray-color);
 }
 
 .chat .container .content {
   font-size: 12px;
-  color: #999999;
+  color: var(--dark-gray-color);
   width: 195px;
   white-space: nowrap;
   overflow: hidden;
@@ -54,8 +54,8 @@
   align-items: center;
   justify-content: center;
 
-  background-color: #3369F3;
-  color: #fff;
+  background-color: var(--blue-bg-color);
+  color: var(--white-color);
   font-size: 11px;
   border-radius: 50%;
 }
