--- a/src/styles/partials/form-input.css
+++ b/src/styles/partials/form-input.css
@@ -7,7 +7,7 @@
 }
 
 .form-input .input-label {
-  color: #999999;
+  color: var(--dark-gray-color);
   font-size: 9px;
   margin-bottom: 4px;
 }
@@ -18,7 +18,7 @@
 }
 
 .form-input .input-field::placeholder {
-  color: #999999;
+  color: var(--dark-gray-color);
   font-size: 13px;
 }
 
@@ -26,6 +26,6 @@
   position: absolute;
   left: 0;
   bottom: -16px;
-  color: #FF2F2F;
+  color: var(--red-color);
   font-size: 8px;
 }
