--- a/src/styles/partials/message-input.css
+++ b/src/styles/partials/message-input.css
@@ -5,6 +5,6 @@
 
 .message-input .input-field {
   height: 32px;
-  background-color: #EFEFEF;
+  background-color: var(--gray-bg-color);
   border-radius: 30px;
 }
