--- a/src/partials/chat.hbs
+++ b/src/partials/chat.hbs
@@ -3,7 +3,7 @@
   <div class="container">
     <div class="top">
       <span class="name">Андрей</span>
-      <span class="timestamp">10:49</span>
+      {{> timestamp content="10:49" }}
     </div>
     <div class="bottom">
       <span class="content">Привет! Смотри, тут всплыл интересный кусок лунной космической истории — НАСА в какой-то момент попросила Хассельблад адаптировать модель SWC для полетов на Луну.</span>
