--- a/src/partials/message-input.hbs
+++ b/src/partials/message-input.hbs
@@ -1,3 +1,3 @@
-<div class="message-input"></div>
-  <input class="input-field" type="text" name="message">
+<div class="message-input">
+  <input class="input-field" type="text" name="message" placeholder="Сообщение">
 </div>
