--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -3,6 +3,7 @@
 
 @import './partials/avatar.css';
 @import './partials/button-action.css';
+@import './partials/button-back.css';
 @import './partials/button-link.css';
 @import './partials//button-send.css';
 @import './partials/chat-feed.css';
@@ -11,10 +12,13 @@
 @import './partials/empty-chat-feed.css';
 @import './partials/error.css';
 @import './partials/form-input.css';
+@import './partials/incoming-message.css';
 @import './partials/message-input.css';
+@import './partials/outcoming-message.css';
 @import './partials/page-form.css';
 @import './partials/profile-input.css';
 @import './partials/search-input.css';
+@import './partials/timestamp.css';
 
 @import './pages/chat-page.css';
 @import './pages/error-page.css';
