--- a/src/partials/empty-chat-feed.hbs
+++ b/src/partials/empty-chat-feed.hbs
@@ -1,3 +1,3 @@
-<div class="chat-feed">
+<div class="empty-chat-feed">
   <span class="empty-text">Выберите чат чтобы отправить сообщение</span>
 </div>
