--- a/src/styles/pages/profile-page.css
+++ b/src/styles/pages/profile-page.css
@@ -1,9 +1,59 @@
 .profile-page {
+  width: 100%;
   height: 100%;
+
+  display: grid;
+  grid-template-columns: 64px 1fr;
+  grid-template-rows: 100%;
+}
+
+.profile-page .navigation {
   display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--light-gray-bg-color);
+  border-right: 1px solid var(--light-gray-color);
 }
 
 .profile {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  max-width: 510px;
+  width: 100%;
+  margin: 0 auto;
+  padding-top: 60px;
+}
+
+.profile .avatar {
+  width: 130px;
+  height: 130px;
+  margin-bottom: 20px;
+}
+
+.profile .name {
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 16px;
+  text-align: center;
+
+  margin-bottom: 60px;
+}
+
+.profile .info {
+  width: 100%;
+  margin-bottom: 60px;
+
+}
+
+.profile .info > :not(:last-child) {
+  border-bottom: 1px solid var(--light-gray-color);
+}
+
+.profile .buttons {
+
+}
+
+.profile .buttons > :not(:last-child) {
+  border-bottom: 1px solid var(--light-gray-color);
 }
