--- a/src/styles/partials/button-action.css
+++ b/src/styles/partials/button-action.css
@@ -7,6 +7,9 @@
   justify-content: center;
 
   background-color: var(--blue-color);
+  font-size: 13px;
+  line-height: 13px;
+  text-align: center;
   color: var(--white-color);
   border-radius: 8px;
 }
