--- a/src/styles/partials/button-link.css
+++ b/src/styles/partials/button-link.css
@@ -6,7 +6,9 @@
   align-items: center;
   justify-content: center;
 
+  font-size: 11px;
+  line-height: 11px;
+  text-align: left;
   background-color: var(--white-bg-color);
   color: var(--blue-color);
-  border-radius: 8px;
 }
