--- a/src/styles/partials/form-input.css
+++ b/src/styles/partials/form-input.css
@@ -1,6 +1,6 @@
 .form-input {
   width: 100%;
-  border-bottom: 1px solid #3369F3;
+  border-bottom: 1px solid var(--blue-bg-color);
   margin-bottom: 16px;
 
   position: relative;
@@ -9,17 +9,24 @@
 .form-input .input-label {
   color: var(--dark-gray-color);
   font-size: 9px;
+  line-height: 9px;
+  text-align: left;
+
   margin-bottom: 4px;
 }
 
 .form-input .input-field {
   height: 25px;
   font-size: 13px;
+  line-height: 13px;
+  text-align: left;
 }
 
 .form-input .input-field::placeholder {
   color: var(--dark-gray-color);
   font-size: 13px;
+  line-height: 13px;
+  text-align: left;
 }
 
 .form-input .input-error {
@@ -28,4 +35,7 @@
   bottom: -16px;
   color: var(--red-color);
   font-size: 8px;
+  font-weight: 400;
+  line-height: 8px;
+  text-align: left;
 }
