--- a/src/styles/partials/page-form.css
+++ b/src/styles/partials/page-form.css
@@ -1,11 +1,9 @@
 .page-form {
   max-width: 340px;
   width: 100%;
-
   padding: 50px 30px 30px 30px;
-
   border-radius: 12px;
-  box-shadow: 0px 0px 4px 2px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 0px 6px 0px #00000024;
 }
 
 .page-form .form {
@@ -16,9 +14,7 @@
 }
 
 .page-form .title {
-  font-family: Inter;
   font-size: 20px;
-  font-weight: 500;
   line-height: 20px;
   text-align: center;
   margin: 0;
