--- a/src/styles/pages/profile-page.css
+++ b/src/styles/pages/profile-page.css
@@ -51,7 +51,19 @@
 }
 
 .profile .buttons {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
 
+.profile .buttons .button-link {
+  justify-content: flex-start;
+  font-size: 13px;
+  line-height: 13px;
+}
+
+.profile .buttons .button-link:last-child {
+  color: var(--red-color);
 }
 
 .profile .buttons > :not(:last-child) {
