--- a/src/styles/partials/chats.css
+++ b/src/styles/partials/chats.css
@@ -40,7 +40,7 @@
 }
 
 .chats-box {
-  height: 100%;
+  height: calc(100% - 90px);
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
