--- a/src/partials/chats.hbs
+++ b/src/partials/chats.hbs
@@ -1,6 +1,6 @@
 <div class="chats">
   <div class="top-bar">
-    <a class="profile-link" href="#">Профиль</a>
+    <a class="profile-link" href="../pages/profile-page.html">Профиль</a>
     {{> search-input }}
   </div>
   <div class="chats-box">
