--- a/src/partials/form-input.hbs
+++ b/src/partials/form-input.hbs
@@ -1,5 +1,5 @@
 <div class="form-input">
-  <span class="input-label">{{label}}</span>
+  {{!-- <span class="input-label">{{label}}</span> --}}
   <input class="input-field" name={{name}} type={{type}} placeholder={{placeholder}}>
-  <span class="input-error">Ошибка</span>
+  {{!-- <span class="input-error">Ошибка</span> --}}
 </div>
