--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -14,6 +14,7 @@
 @import './partials/form-input.css';
 @import './partials/incoming-message.css';
 @import './partials/message-input.css';
+@import './partials/modal.css';
 @import './partials/outcoming-message.css';
 @import './partials/page-form.css';
 @import './partials/profile-input.css';
