--- a/src/styles/pages/profile-page.css
+++ b/src/styles/pages/profile-page.css
@@ -1,6 +1,7 @@
 .profile-page {
   width: 100%;
   height: 100%;
+  position: relative;
 
   display: grid;
   grid-template-columns: 64px 1fr;
@@ -25,10 +26,42 @@
   padding-top: 60px;
 }
 
-.profile .avatar {
+.profile .avatar-wrapper {
   width: 130px;
   height: 130px;
   margin-bottom: 20px;
+  border-radius: 50%;
+  overflow: hidden;
+
+  position: relative;
+}
+
+.profile .avatar {
+  width: 130px;
+  height: 130px;
+  
+  background-image: url(../../../static/icons/avatar-icon.svg);
+  background-repeat: no-repeat;
+  background-position: center center;
+  cursor: pointer;
+}
+
+.profile .avatar-hover {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  cursor: pointer;
+
+  align-items: center;
+  justify-content: center;
+  font-size: 13px;
+  line-height: 14px;
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: var(--white-color);
 }
 
 .profile .name {
