--- a/src/styles/partials/page-form.css
+++ b/src/styles/partials/page-form.css
@@ -4,6 +4,7 @@
   padding: 50px 30px 30px 30px;
   border-radius: 12px;
   box-shadow: 0px 0px 6px 0px #00000024;
+  background-color: var(--white-bg-color);
 }
 
 .page-form .form {
