--- a/src/partials/avatar-input.hbs
+++ b/src/partials/avatar-input.hbs
@@ -1,1 +1,4 @@
-<input class="avatar-input" type="image" name="avatar" />
+<div class="avatar-input">
+  <input class="input-field" type="file" name="avatar" />
+  <span class="input-file-text">Выбрать файл на компьютере</span>
+</div>
