--- a/src/partials/profile-input.hbs
+++ b/src/partials/profile-input.hbs
@@ -1,4 +1,4 @@
 <div class="profile-input">
   <span class="input-label">{{label}}</span>
-  <input class="input-field" name={{name}} type={{type}} placeholder={{placeholder}}>
+  <input class="input-field" name={{name}} type={{type}} placeholder={{placeholder}} value={{value}}>
 </div>
