--- a/src/styles/partials/modal.css
+++ b/src/styles/partials/modal.css
@@ -11,3 +11,14 @@
   background: rgba(0, 0, 0, 0.4);
 
 }
+
+.modal-content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+
+.modal .page-form .title {
+  font-size: 15px;
+}
