--- a/src/styles/partials/chat-feed.css
+++ b/src/styles/partials/chat-feed.css
@@ -33,7 +33,7 @@
 .chat-feed .top-bar .actions {
   width: 3px;
   height: 15px;
-  background-image: url(../../../static/icons/actions-icon.svg);
+  background-image: url(../icons/actions-icon.svg);
   background-position: center center;
   background-size: contain;
   background-repeat: no-repeat;
@@ -70,7 +70,7 @@
   height: 32px;
   width: 32px;
 
-  background-image: url(../../../static/icons/attach-icon.svg);
+  background-image: url(../icons/attach-icon.svg);
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
