--- a/src/styles/settings.css
+++ b/src/styles/settings.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: "Inter";
   src:
-    url("../../static/fonts/Inter/Inter_18pt-Regular.woff2") format("woff2"),
-    url("../../static/fonts/Inter/Inter_18pt-Regular.woff") format("woff"),
-    url("../../static/fonts/Inter/Inter_18pt-Regular.otf") format("otf"),
-    url("../../static/fonts/Inter/Inter_18pt-Regular.ttf") format("ttf");
+    url("../fonts/Inter/Inter_18pt-Regular.woff2") format("woff2"),
+    url("../fonts/Inter/Inter_18pt-Regular.woff") format("woff"),
+    url("../fonts/Inter/Inter_18pt-Regular.otf") format("otf"),
+    url("../fonts/Inter/Inter_18pt-Regular.ttf") format("ttf");
   font-weight: 400;
   font-optical-sizing: auto;
 }
@@ -12,10 +12,10 @@
 @font-face {
   font-family: "Inter";
   src:
-    url("../../static/fonts/Inter/Inter_18pt-Medium.woff2") format("woff2"),
-    url("../../static/fonts/Inter/Inter_18pt-Medium.woff") format("woff"),
-    url("../../static/fonts/Inter/Inter_18pt-Medium.otf") format("otf"),
-    url("../../static/fonts/Inter/Inter_18pt-Medium.ttf") format("ttf");
+    url("../fonts/Inter/Inter_18pt-Medium.woff2") format("woff2"),
+    url("../fonts/Inter/Inter_18pt-Medium.woff") format("woff"),
+    url("../fonts/Inter/Inter_18pt-Medium.otf") format("otf"),
+    url("../fonts/Inter/Inter_18pt-Medium.ttf") format("ttf");
   font-weight: 500;
   font-optical-sizing: auto;
 }
@@ -23,10 +23,10 @@
 @font-face {
   font-family: "Inter";
   src:
-    url("../../static/fonts/Inter/Inter_18pt-SemiBold.woff2") format("woff2"),
-    url("../../static/fonts/Inter/Inter_18pt-SemiBold.woff") format("woff"),
-    url("../../static/fonts/Inter/Inter_18pt-SemiBold.otf") format("otf"),
-    url("../../static/fonts/Inter/Inter_18pt-SemiBold.ttf") format("ttf");
+    url("../fonts/Inter/Inter_18pt-SemiBold.woff2") format("woff2"),
+    url("../fonts/Inter/Inter_18pt-SemiBold.woff") format("woff"),
+    url("../fonts/Inter/Inter_18pt-SemiBold.otf") format("otf"),
+    url("../fonts/Inter/Inter_18pt-SemiBold.ttf") format("ttf");
   font-weight: 600;
   font-optical-sizing: auto;
 }
