--- a/src/components/chat-feed/tpl.hbs
+++ b/src/components/chat-feed/tpl.hbs
@@ -1,7 +1,7 @@
 <div class="chat-feed">
   <div class="top-bar">
     <div class="info">
-      {{> avatar }}
+      {{> Avatar }}
       <span class="name">Андрей</span>
     </div>
     <div class="actions"></div>
@@ -10,7 +10,7 @@
   </div>
   <div class="send-message">
     <div class="attach"></div>
-    {{> message-input }}
-    {{> button-send }}
+    {{> MessageInput }}
+    {{> ButtonSend }}
   </div>
 </div>
