--- a/src/components/chat/tpl.hbs
+++ b/src/components/chat/tpl.hbs
@@ -1,9 +1,9 @@
 <div class="chat">
-  {{> avatar }}
+  {{> Avatar }}
   <div class="container">
     <div class="top">
       <span class="name">Андрей</span>
-      {{> timestamp content="10:49" }}
+      {{> Timestamp content="10:49" }}
     </div>
     <div class="bottom">
       <span class="content">Привет! Смотри, тут всплыл интересный кусок лунной космической истории — НАСА в какой-то момент попросила Хассельблад адаптировать модель SWC для полетов на Луну.</span>
