--- a/src/pages/chat-page/tpl.hbs
+++ b/src/pages/chat-page/tpl.hbs
@@ -1,4 +1,4 @@
-    <main class="chat-page">
-      {{> Chats }}
-      {{> EmptyChatFeed }}
-    </main>
+<main class="chat-page">
+      {{!-- {{> Chats }}
+      {{> EmptyChatFeed }} --}}
+</main>
