--- a/src/pages/error-page/tpl.hbs
+++ b/src/pages/error-page/tpl.hbs
@@ -1,4 +1,4 @@
-    <main class="non-found-page" id="non-found-page">
-      {{> Error title="500" subtitle="Мы уже фиксим" }}
-      {{> ButtonLink href="#" action="Назад к чатам" }}
-    </main>
+<main class="non-found-page" id="non-found-page">
+  {{!-- {{> Error title="500" subtitle="Мы уже фиксим" }} --}}
+  {{!-- {{> ButtonLink href="/chats" action="Назад к чатам" }} --}}
+</main>
