--- a/src/pages/login-page/tpl.hbs
+++ b/src/pages/login-page/tpl.hbs
@@ -1,5 +1,5 @@
-    <main class="login-page">
-      {{#> PageForm name="login-form" id="login-form" }}
+<main class="login-page">
+      {{!-- {{#> PageForm name="login-form" id="login-form" }}
         <h2 class="title">Вход</h2>
         <div class="form-inputs">
           {{> FormInput label="Логин" name="login" type="text" placeholder="Логин" }}
@@ -7,5 +7,5 @@
         </div>
         {{> ButtonAction action="Войти" }}
         {{> ButtonLink href="./signup-page" action="Нет аккаунта?" }}
-      {{/PageForm}}
-    </main>
+      {{/PageForm}} --}}
+</main>
