--- a/src/pages/profile-page/tpl.hbs
+++ b/src/pages/profile-page/tpl.hbs
@@ -1,5 +1,5 @@
-    <main class="profile-page" id="profile-page">
-      <div class="navigation">
+<main class="profile-page" id="profile-page">
+      {{!-- <div class="navigation">
         {{> ButtonBack href="./chat-page" }}
       </div>
       <div class="profile">
@@ -23,12 +23,12 @@
           {{> ButtonLink href="./change-profile-password-page.html" action="Изменить пароль" }}
           {{> ButtonLink href="#" action="Выйти" }}
         </div>
-      </div>
-    </main>
-    {{#> Modal }}
+      </div> --}}
+</main>
+    {{!-- {{#> Modal }}
       {{#> PageForm name="avatar-form" id="avatar-form" }}
       <h2 class="title">Загрузите файл</h2>
       {{> AvatarInput }}
       {{> ButtonAction action="Поменять" }}
       {{/PageForm}}
-    {{/Modal}}
+    {{/Modal}} --}}
