--- a/src/pages/signup-page/tpl.hbs
+++ b/src/pages/signup-page/tpl.hbs
@@ -1,5 +1,5 @@
-    <main class="signup-page" id="signup-page">
-      {{#> PageForm name="login-form" id="login-form" }}
+<main class="signup-page" id="signup-page">
+      {{!-- {{#> PageForm name="login-form" id="login-form" }}
         <p class="title">Регистрация</p>
         <div class="form-inputs">
           {{> FormInput name="email" type="email" placeholder="Почта" }}
@@ -12,5 +12,5 @@
         </div>
         {{> ButtonAction action="Зарегистрироваться" }}
         {{> ButtonLink href="./login-page" action="Войти" }}
-      {{/PageForm}}
-    </main>
+      {{/PageForm}} --}}
+</main>
