--- a/src/components/error/tpl.hbs
+++ b/src/components/error/tpl.hbs
@@ -1,8 +1,8 @@
 <div class="error-wrapper">
-  <h1 class="error-title">
+  {{!-- <h1 class="error-title">
     {{title}}
   </h1>
   <p class="error-subtitle">
     {{subtitle}}
-  </p>
+  </p> --}}
 </div>
