--- a/src/pages/non-found-page/tpl.hbs
+++ b/src/pages/non-found-page/tpl.hbs
@@ -1,4 +1,4 @@
 <main class="error-page">
-  {{> Error title="404" subtitle="Не туда попали" }}
-  {{> ButtonLink href="#" action="Назад к чатам" }}
+  {{!-- {{> Error title="404" subtitle="Не туда попали" }}
+  {{> ButtonLink href="#" action="Назад к чатам" }} --}}
 </main>
