--- a/src/styles/partials/page-form.css
+++ b/src/styles/partials/page-form.css
@@ -23,7 +23,7 @@
   margin-bottom: 40px;
 }
 
-.page-form .form-inputs {
+.page-form .inputs {
   margin-bottom: 40px;
   width: 100%;
   display: flex;
