--- a/src/styles/partials/button.css
+++ b/src/styles/partials/button.css
@@ -15,6 +15,21 @@
   border-radius: 8px;
 }
 
+.button-link {
+  width: 100%;
+  height: 37px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  font-size: 11px;
+  line-height: 11px;
+  text-align: left;
+  background-color: var(--white-bg-color);
+  color: var(--blue-color);
+}
+
 .button-back {
   height: 28px;
   width: 28px;
