--- a/src/styles/settings.css
+++ b/src/styles/settings.css
@@ -77,23 +77,9 @@ button {
   background-color: var(--white-bg-color);
 }
 
-.main-page {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  margin: 100px;
-}
-
-.main-page > nav > ul {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.main-page > nav > ul > li {
-  padding: 10px;
+main {
+  width: 100%;
+  height: 100%;
 }
 
 .input-field {
