--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -4,10 +4,7 @@
 
 @import './partials/avatar-input.css';
 @import './partials/avatar.css';
-@import './partials/button-action.css';
-@import './partials/button-back.css';
-@import './partials/button-link.css';
-@import './partials//button-send.css';
+@import './partials//button.css';
 @import './partials/chat-feed.css';
 @import './partials/chat.css';
 @import './partials/chats.css';
