--- a/style.css
+++ b/style.css
@@ -597,6 +597,7 @@ main {
 .chat-feed .messages {
   display: flex;
   flex-direction: column;
+  height: 100%;
 }
 
 .chat-feed .message-group {
@@ -604,7 +605,6 @@ main {
 }
 
 .chat-feed .message {
-  
 }
 
 .chat-feed .timestamp {
@@ -613,7 +613,7 @@ main {
   text-align: center;
 }
 
-.chat-feed .send-message {
+.chat-feed .send-message form {
   display: flex;
   width: 100%;
   border-top: 1px solid var(--light-gray-color);
