--- a/style.css
+++ b/style.css
@@ -598,13 +598,25 @@ main {
   display: flex;
   flex-direction: column;
   height: 100%;
+  padding: 30px 0;
 }
 
-.chat-feed .message-group {
-
+.chat-feed .outcoming-message {
+  background-color: var(--light-gray-bg-color);
+  border-top-right-radius: 10px;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+  max-width: 402px;
+  padding: 10px;
 }
 
-.chat-feed .message {
+.chat-feed .incoming-message {
+  background-color: var(--light-gray-bg-color);
+  border-top-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  max-width: 402px;
+  padding: 10px;
 }
 
 .chat-feed .timestamp {
