--- a/src/styles/components/chat-feed.css
+++ b/src/styles/components/chat-feed.css
@@ -31,6 +31,7 @@
 }
 
 .chat-feed .top-bar .actions {
+  position: relative;
   width: 3px;
   height: 15px;
   background-image: url(../icons/actions-icon.svg);
@@ -39,29 +40,46 @@
   background-repeat: no-repeat;
 }
 
+.chat-feed .top-bar .actions .frame {
+  position: absolute;
+  right: -10px;
+  top: 40px;
+  width: 200px;
+  height: 100px;
+}
+
 .chat-feed .messages {
   display: flex;
   flex-direction: column;
+  justify-content: flex-end;
   height: 100%;
   padding: 30px 0;
 }
 
 .chat-feed .outcoming-message {
-  background-color: var(--light-gray-bg-color);
-  border-top-right-radius: 10px;
-  border-top-left-radius: 10px;
-  border-bottom-left-radius: 10px;
+  background-color: var(--light-blue-color);
+  border-top-right-radius: 12px;
+  border-top-left-radius: 12px;
+  border-bottom-left-radius: 12px;
   max-width: 402px;
   padding: 10px;
+  margin-left: auto;
+  font-size: 12px;
+  line-height: 15px;
+  text-align: left;
 }
 
 .chat-feed .incoming-message {
   background-color: var(--light-gray-bg-color);
-  border-top-right-radius: 10px;
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
+  border-top-right-radius: 12px;
+  border-bottom-left-radius: 12px;
+  border-bottom-right-radius: 12px;
   max-width: 402px;
   padding: 10px;
+  margin-right: auto;
+  font-size: 12px;
+  line-height: 15px;
+  text-align: left;
 }
 
 .chat-feed .timestamp {
@@ -70,7 +88,7 @@
   text-align: center;
 }
 
-.chat-feed .send-message form {
+.chat-feed .send-message .form-wrapper {
   display: flex;
   width: 100%;
   border-top: 1px solid var(--light-gray-color);
@@ -79,6 +97,8 @@
 }
 
 .chat-feed .send-message .attach {
+  position: relative;
+
   height: 32px;
   width: 32px;
 
@@ -86,4 +106,12 @@
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
+}
+
+.chat-feed .send-message .attach .frame {
+  position: absolute;
+  left: -10px;
+  width: 200px;
+  height: 100px;
+  bottom: 55px;
 }
