--- a/src/styles/components/modal.css
+++ b/src/styles/components/modal.css
@@ -9,7 +9,6 @@
   justify-content: center;
 
   background: rgba(0, 0, 0, 0.4);
-
 }
 
 .modal-content {
@@ -19,8 +18,20 @@
 
   max-width: 340px;
   width: 100%;
+  padding: 50px 30px 30px;
+  border-radius: 12px;
+  box-shadow: 0 0 6px #00000024;
+  background-color: var(--white-bg-color);
 }
 
-.modal .page-form .title {
+.modal .form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal .form .title {
   font-size: 15px;
 }
