--- a/style.css
+++ b/style.css
@@ -461,37 +461,6 @@ main {
   outline: none;
 }
 
-.avatar-input {
-  position: relative;
-  width: 175px;
-  margin-bottom: 40px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.avatar-input .input-file-text {
-  font-size: 12px;
-  line-height: 16px;
-  text-align: center;
-  color: var(--blue-color);
-  text-decoration: underline;
-}
-
-.avatar-input .input-field {
-  opacity: 0;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  cursor: pointer;
-}
-
-.avatar-input .input-field::file-selector-button {
-  display: none;
-}
-
 .avatar {
   width: 130px;
   height: 130px;
@@ -586,6 +555,7 @@ main {
 }
 
 .chat-feed .top-bar .actions {
+  position: relative;
   width: 3px;
   height: 15px;
   background-image: url(../icons/actions-icon.svg);
@@ -594,29 +564,46 @@ main {
   background-repeat: no-repeat;
 }
 
+.chat-feed .top-bar .actions .frame {
+  position: absolute;
+  right: -10px;
+  top: 40px;
+  width: 200px;
+  height: 100px;
+}
+
 .chat-feed .messages {
   display: flex;
   flex-direction: column;
+  justify-content: flex-end;
   height: 100%;
   padding: 30px 0;
 }
 
 .chat-feed .outcoming-message {
-  background-color: var(--light-gray-bg-color);
-  border-top-right-radius: 10px;
-  border-top-left-radius: 10px;
-  border-bottom-left-radius: 10px;
+  background-color: var(--light-blue-color);
+  border-top-right-radius: 12px;
+  border-top-left-radius: 12px;
+  border-bottom-left-radius: 12px;
   max-width: 402px;
   padding: 10px;
+  margin-left: auto;
+  font-size: 12px;
+  line-height: 15px;
+  text-align: left;
 }
 
 .chat-feed .incoming-message {
   background-color: var(--light-gray-bg-color);
-  border-top-right-radius: 10px;
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
+  border-top-right-radius: 12px;
+  border-bottom-left-radius: 12px;
+  border-bottom-right-radius: 12px;
   max-width: 402px;
   padding: 10px;
+  margin-right: auto;
+  font-size: 12px;
+  line-height: 15px;
+  text-align: left;
 }
 
 .chat-feed .timestamp {
@@ -625,7 +612,7 @@ main {
   text-align: center;
 }
 
-.chat-feed .send-message form {
+.chat-feed .send-message .form-wrapper {
   display: flex;
   width: 100%;
   border-top: 1px solid var(--light-gray-color);
@@ -634,6 +621,8 @@ main {
 }
 
 .chat-feed .send-message .attach {
+  position: relative;
+
   height: 32px;
   width: 32px;
 
@@ -641,6 +630,14 @@ main {
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
+}
+
+.chat-feed .send-message .attach .frame {
+  position: absolute;
+  left: -10px;
+  width: 200px;
+  height: 100px;
+  bottom: 55px;
 }
 
 .chat {
@@ -869,6 +866,21 @@ main {
   opacity: 0;
 }
 
+.frame {
+  display: none;
+  align-items: center;
+  justify-content: center;
+
+  padding: 15px;
+  border-radius: 12px;
+  box-shadow: 0 0 6px #00000024;
+  background-color: var(--white-bg-color);
+}
+
+.frame.visible {
+  display: flex;
+}
+
 .message-input {
   padding: 0 10px;
   width: 100%;
@@ -909,7 +921,6 @@ main {
   justify-content: center;
 
   background: rgba(0, 0, 0, 0.4);
-
 }
 
 .modal-content {
@@ -919,9 +930,21 @@ main {
 
   max-width: 340px;
   width: 100%;
+  padding: 50px 30px 30px;
+  border-radius: 12px;
+  box-shadow: 0 0 6px #00000024;
+  background-color: var(--white-bg-color);
 }
 
-.modal .page-form .title {
+.modal .form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal .form .title {
   font-size: 15px;
 }
 
