--- a/style.css
+++ b/style.css
@@ -1,354 +1,4 @@
-/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
-
-/* Document
-   ========================================================================== */
-
-/**
- * 1. Correct the line height in all browsers.
- * 2. Prevent adjustments of font size after orientation changes in iOS.
- */
-
-html {
-  line-height: 1.15; /* 1 */
-  -webkit-text-size-adjust: 100%; /* 2 */
-}
-
-/* Sections
-   ========================================================================== */
-
-/**
- * Remove the margin in all browsers.
- */
-
-body {
-  margin: 0;
-}
-
-/**
- * Render the `main` element consistently in IE.
- */
-
-main {
-  display: block;
-}
-
-/**
- * Correct the font size and margin on `h1` elements within `section` and
- * `article` contexts in Chrome, Firefox, and Safari.
- */
-
-h1 {
-  font-size: 2em;
-  margin: 0.67em 0;
-}
-
-/* Grouping content
-   ========================================================================== */
-
-/**
- * 1. Add the correct box sizing in Firefox.
- * 2. Show the overflow in Edge and IE.
- */
-
-hr {
-  box-sizing: content-box; /* 1 */
-  height: 0; /* 1 */
-  overflow: visible; /* 2 */
-}
-
-/**
- * 1. Correct the inheritance and scaling of font size in all browsers.
- * 2. Correct the odd `em` font sizing in all browsers.
- */
-
-pre {
-  font-family: monospace, monospace; /* 1 */
-  font-size: 1em; /* 2 */
-}
-
-/* Text-level semantics
-   ========================================================================== */
-
-/**
- * Remove the gray background on active links in IE 10.
- */
-
-a {
-  background-color: transparent;
-}
-
-/**
- * 1. Remove the bottom border in Chrome 57-
- * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
- */
-
-abbr[title] {
-  border-bottom: none; /* 1 */
-  text-decoration: underline; /* 2 */
-  -webkit-text-decoration: underline dotted;
-          text-decoration: underline dotted; /* 2 */
-}
-
-/**
- * Add the correct font weight in Chrome, Edge, and Safari.
- */
-
-b,
-strong {
-  font-weight: bolder;
-}
-
-/**
- * 1. Correct the inheritance and scaling of font size in all browsers.
- * 2. Correct the odd `em` font sizing in all browsers.
- */
-
-code,
-kbd,
-samp {
-  font-family: monospace, monospace; /* 1 */
-  font-size: 1em; /* 2 */
-}
-
-/**
- * Add the correct font size in all browsers.
- */
-
-small {
-  font-size: 80%;
-}
-
-/**
- * Prevent `sub` and `sup` elements from affecting the line height in
- * all browsers.
- */
-
-sub,
-sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline;
-}
-
-sub {
-  bottom: -0.25em;
-}
-
-sup {
-  top: -0.5em;
-}
-
-/* Embedded content
-   ========================================================================== */
-
-/**
- * Remove the border on images inside links in IE 10.
- */
-
-img {
-  border-style: none;
-}
-
-/* Forms
-   ========================================================================== */
-
-/**
- * 1. Change the font styles in all browsers.
- * 2. Remove the margin in Firefox and Safari.
- */
-
-button,
-input,
-optgroup,
-select,
-textarea {
-  font-family: inherit; /* 1 */
-  font-size: 100%; /* 1 */
-  line-height: 1.15; /* 1 */
-  margin: 0; /* 2 */
-}
-
-/**
- * Show the overflow in IE.
- * 1. Show the overflow in Edge.
- */
-
-button,
-input { /* 1 */
-  overflow: visible;
-}
-
-/**
- * Remove the inheritance of text transform in Edge, Firefox, and IE.
- * 1. Remove the inheritance of text transform in Firefox.
- */
-
-button,
-select { /* 1 */
-  text-transform: none;
-}
-
-/**
- * Correct the inability to style clickable types in iOS and Safari.
- */
-
-button,
-[type="button"],
-[type="reset"],
-[type="submit"] {
-  -webkit-appearance: button;
-}
-
-/**
- * Remove the inner border and padding in Firefox.
- */
-
-button::-moz-focus-inner,
-[type="button"]::-moz-focus-inner,
-[type="reset"]::-moz-focus-inner,
-[type="submit"]::-moz-focus-inner {
-  border-style: none;
-  padding: 0;
-}
-
-/**
- * Restore the focus styles unset by the previous rule.
- */
-
-button:-moz-focusring,
-[type="button"]:-moz-focusring,
-[type="reset"]:-moz-focusring,
-[type="submit"]:-moz-focusring {
-  outline: 1px dotted ButtonText;
-}
-
-/**
- * Correct the padding in Firefox.
- */
-
-fieldset {
-  padding: 0.35em 0.75em 0.625em;
-}
-
-/**
- * 1. Correct the text wrapping in Edge and IE.
- * 2. Correct the color inheritance from `fieldset` elements in IE.
- * 3. Remove the padding so developers are not caught out when they zero out
- *    `fieldset` elements in all browsers.
- */
-
-legend {
-  box-sizing: border-box; /* 1 */
-  color: inherit; /* 2 */
-  display: table; /* 1 */
-  max-width: 100%; /* 1 */
-  padding: 0; /* 3 */
-  white-space: normal; /* 1 */
-}
-
-/**
- * Add the correct vertical alignment in Chrome, Firefox, and Opera.
- */
-
-progress {
-  vertical-align: baseline;
-}
-
-/**
- * Remove the default vertical scrollbar in IE 10+.
- */
-
-textarea {
-  overflow: auto;
-}
-
-/**
- * 1. Add the correct box sizing in IE 10.
- * 2. Remove the padding in IE 10.
- */
-
-[type="checkbox"],
-[type="radio"] {
-  box-sizing: border-box; /* 1 */
-  padding: 0; /* 2 */
-}
-
-/**
- * Correct the cursor style of increment and decrement buttons in Chrome.
- */
-
-[type="number"]::-webkit-inner-spin-button,
-[type="number"]::-webkit-outer-spin-button {
-  height: auto;
-}
-
-/**
- * 1. Correct the odd appearance in Chrome and Safari.
- * 2. Correct the outline style in Safari.
- */
-
-[type="search"] {
-  -webkit-appearance: textfield; /* 1 */
-  outline-offset: -2px; /* 2 */
-}
-
-/**
- * Remove the inner padding in Chrome and Safari on macOS.
- */
-
-[type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
-
-/**
- * 1. Correct the inability to style clickable types in iOS and Safari.
- * 2. Change font properties to `inherit` in Safari.
- */
-
-::-webkit-file-upload-button {
-  -webkit-appearance: button; /* 1 */
-  font: inherit; /* 2 */
-}
-
-/* Interactive
-   ========================================================================== */
-
-/*
- * Add the correct display in Edge, IE 10+, and Firefox.
- */
-
-details {
-  display: block;
-}
-
-/*
- * Add the correct display in all browsers.
- */
-
-summary {
-  display: list-item;
-}
-
-/* Misc
-   ========================================================================== */
-
-/**
- * Add the correct display in IE 10+.
- */
-
-template {
-  display: none;
-}
-
-/**
- * Add the correct display in IE 10.
- */
-
-[hidden] {
-  display: none;
-}
-
+/* @import 'normalize'; */
 :root {
   --white-bg-color: #FFFFFF;
   --gray-bg-color: #EFEFEF;
@@ -364,7 +14,6 @@ template {
   --red-color: #FF2F2F;
   --white-color: #FFFFFF;
 }
-
 @font-face {
   font-family: "Inter";
   src:
@@ -375,7 +24,6 @@ template {
   font-weight: 400;
   font-optical-sizing: auto;
 }
-
 @font-face {
   font-family: "Inter";
   src:
@@ -386,7 +34,6 @@ template {
   font-weight: 500;
   font-optical-sizing: auto;
 }
-
 @font-face {
   font-family: "Inter";
   src:
@@ -397,36 +44,30 @@ template {
   font-weight: 600;
   font-optical-sizing: auto;
 }
-
 body {
   margin: 0;
   padding: 0;
   border: 0;
 }
-
 *,
 *::before,
 *::after {
   box-sizing: border-box;
 }
-
 ol, ul, li { 
   list-style: none; 
   margin: 0;
   padding: 0;
 }
-
 a { 
   text-decoration: none; 
   color: inherit;
   cursor: pointer;
 }
-
 button {
   border: none;
   cursor: pointer;
 }
-
 #app {
   max-width: 1280px;
   width: 100%;
@@ -443,24 +84,20 @@ button {
   color: var(--black-color);
   background-color: var(--white-bg-color);
 }
-
 main {
   width: 100%;
   height: 100%;
 }
-
 .input-field {
   border: none;
   padding: 0;
   width: 100%;
   outline: none;
 }
-
 .input-field:focus {
   border: none;
   outline: none;
 }
-
 .avatar-input {
   position: relative;
   width: 175px;
@@ -469,7 +106,6 @@ main {
   align-items: center;
   justify-content: center;
 }
-
 .avatar-input .input-file-text {
   font-size: 12px;
   line-height: 16px;
@@ -477,7 +113,6 @@ main {
   color: var(--blue-color);
   text-decoration: underline;
 }
-
 .avatar-input .input-field {
   opacity: 0;
   position: absolute;
@@ -487,18 +122,15 @@ main {
   bottom: 0;
   cursor: pointer;
 }
-
 .avatar-input .input-field::file-selector-button {
   display: none;
 }
-
 .avatar {
   width: 130px;
   height: 130px;
   border-radius: 50%;
   background-color: var(--gray-color);
 }
-
 .button-action {
   max-width: 280px;
   width: 100%;
@@ -515,7 +147,6 @@ main {
   color: var(--white-color);
   border-radius: 8px;
 }
-
 .button-link {
   width: 100%;
   height: 37px;
@@ -530,7 +161,6 @@ main {
   background-color: var(--white-bg-color);
   color: var(--blue-color);
 }
-
 .button-back {
   height: 28px;
   width: 28px;
@@ -541,7 +171,6 @@ main {
   background-size: auto;
   background-repeat: no-repeat;
 }
-
 .button-send {
   height: 28px;
   width: 28px;
@@ -552,13 +181,11 @@ main {
   background-size: auto;
   background-repeat: no-repeat;
 }
-
 .chat-feed {
   display: flex;
   flex-direction: column;
   padding: 0 20px;
 }
-
 .chat-feed .top-bar {
   display: flex;
   justify-content: space-between;
@@ -566,25 +193,21 @@ main {
   padding: 10px 0;
   border-bottom: 1px solid var(--light-gray-color);
 }
-
 .chat-feed .top-bar .info {
   display: flex;
   align-items: center;
 }
-
 .chat-feed .top-bar .avatar {
   width: 34px;
   height: 34px;
   margin-right: 11px;
 }
-
 .chat-feed .top-bar .name {
   font-size: 13px;
   font-weight: 600;
   line-height: 13px;
   text-align: left;
 }
-
 .chat-feed .top-bar .actions {
   position: relative;
   width: 3px;
@@ -594,7 +217,6 @@ main {
   background-size: contain;
   background-repeat: no-repeat;
 }
-
 .chat-feed .top-bar .actions .frame {
   position: absolute;
   right: -10px;
@@ -602,7 +224,6 @@ main {
   width: 200px;
   height: 100px;
 }
-
 .chat-feed .messages {
   display: flex;
   flex-direction: column;
@@ -610,7 +231,6 @@ main {
   height: 100%;
   padding: 30px 0;
 }
-
 .chat-feed .outcoming-message {
   background-color: var(--light-blue-color);
   border-top-right-radius: 12px;
@@ -623,7 +243,6 @@ main {
   line-height: 15px;
   text-align: left;
 }
-
 .chat-feed .incoming-message {
   background-color: var(--light-gray-bg-color);
   border-top-right-radius: 12px;
@@ -636,13 +255,11 @@ main {
   line-height: 15px;
   text-align: left;
 }
-
 .chat-feed .timestamp {
   font-size: 12px;
   line-height: 12px;
   text-align: center;
 }
-
 .chat-feed .send-message .form-wrapper {
   display: flex;
   width: 100%;
@@ -650,7 +267,6 @@ main {
   padding: 10px 0;
   margin-top: auto;
 }
-
 .chat-feed .send-message .attach {
   position: relative;
 
@@ -662,7 +278,6 @@ main {
   background-size: cover;
   background-repeat: no-repeat;
 }
-
 .chat-feed .send-message .attach .frame {
   position: absolute;
   left: -10px;
@@ -670,7 +285,6 @@ main {
   height: 100px;
   bottom: 55px;
 }
-
 .chat {
   height: 70px;
   width: 100%;
@@ -679,43 +293,36 @@ main {
   display: flex;
   border-bottom: 1px solid var(--light-gray-color);
 }
-
 .chat .avatar {
   height: 47px;
   width: 47px;
   margin-right: 12px;
 }
-
 .chat .container {
   height: 47px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
-
 .chat .container .top {
   display: flex;
   justify-content: space-between;
 }
-
 .chat .container .bottom {
   display: flex;
   justify-content: space-between;
 }
-
 .chat .name {
   font-size: 13px;
   font-weight: 600;
   line-height: 13px;
   text-align: left;
 }
-
 .chat .timestamp {
   font-size: 9px;
   line-height: 13px;
   text-align: right;
 }
-
 .chat .content {
   font-size: 12px;
   line-height: 15px;
@@ -726,7 +333,6 @@ main {
   overflow: hidden;
   text-overflow: ellipsis;
 }
-
 .chat .counter {
   height: 20px;
   width: 20px;
@@ -742,7 +348,6 @@ main {
   text-align: center;
   border-radius: 50%;
 }
-
 .chats {
   height: 100%;
   padding: 10px;
@@ -750,14 +355,12 @@ main {
   background-color: var(--light-gray-bg-color);
   border-right: 1px solid var(--light-gray-color);
 }
-
 .chats .top-bar {
   display: flex;
   flex-direction: column;
 
   padding: 10px 0 14px 0;
 }
-
 .chats .profile-link {
   color: var(--dark-gray-color);
   font-size: 12px;
@@ -771,7 +374,6 @@ main {
 
   position: relative;
 }
-
 .chats .profile-link::after {
   height: 10px;
   width: 6px;
@@ -784,7 +386,6 @@ main {
   background-position: center center;
   background-size: cover;
 }
-
 .chats-box {
   height: calc(100% - 90px);
   display: flex;
@@ -794,34 +395,28 @@ main {
   overflow-y: auto;
   border-top: 1px solid var(--light-gray-color);
 }
-
 .chats-box::-webkit-scrollbar {
   width: 4px;               
 }
-
 .chats-box::-webkit-scrollbar-track {
   background: var(--light-gray-bg-color);        
 }
-
 .chats-box::-webkit-scrollbar-thumb {
   background-color: var(--gray-bg-color);
   border-radius: 0;
 }
-
 .empty-chat-feed {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100%;
 }
-
 .empty-text {
   font-size: 12px;
   line-height: 12px;
   text-align: center;
   color: var(--dark-gray-color);
 }
-
 .error-wrapper {
   display: flex;
   flex-direction: column;
@@ -830,7 +425,6 @@ main {
 
   margin-bottom: 70px;
 }
-
 .error-title {
   font-size: 40px;
   line-height: 40px;
@@ -838,14 +432,12 @@ main {
   margin: 0;
   margin-bottom: 20px;
 }
-
 .error-subtitle {
   font-size: 20px;
   line-height: 20px;
   text-align: center;
   margin: 0;
 }
-
 .form-input {
   width: 100%;
   border-bottom: 1px solid var(--blue-bg-color);
@@ -853,7 +445,6 @@ main {
 
   position: relative;
 }
-
 .form-input .input-label {
   color: var(--dark-gray-color);
   font-size: 9px;
@@ -862,28 +453,24 @@ main {
 
   margin-bottom: 4px;
 }
-
 .form-input .input-field {
   height: 25px;
   font-size: 13px;
   line-height: 13px;
   text-align: left;
 }
-
 .form-input .input-field::-moz-placeholder {
   color: var(--dark-gray-color);
   font-size: 13px;
   line-height: 13px;
   text-align: left;
 }
-
 .form-input .input-field::placeholder {
   color: var(--dark-gray-color);
   font-size: 13px;
   line-height: 13px;
   text-align: left;
 }
-
 .form-input .input-error {
   position: absolute;
   left: 0;
@@ -896,7 +483,6 @@ main {
 
   opacity: 0;
 }
-
 .frame {
   display: none;
   align-items: center;
@@ -907,16 +493,13 @@ main {
   box-shadow: 0 0 6px #00000024;
   background-color: var(--white-bg-color);
 }
-
 .frame.visible {
   display: flex;
 }
-
 .message-input {
   padding: 0 10px;
   width: 100%;
 }
-
 .message-input .input-field {
   height: 32px;
   background-color: var(--gray-bg-color);
@@ -926,21 +509,18 @@ main {
   line-height: 12px;
   text-align: left;
 }
-
 .message-input .input-field::-moz-placeholder {
   color: var(--dark-gray-color);
   font-size: 12px;
   line-height: 12px;
   text-align: left;
 }
-
 .message-input .input-field::placeholder {
   color: var(--dark-gray-color);
   font-size: 12px;
   line-height: 12px;
   text-align: left;
 }
-
 .modal {
   position: absolute;
   top: 0;
@@ -953,7 +533,6 @@ main {
 
   background: rgba(0, 0, 0, 0.4);
 }
-
 .modal-content {
   display: flex;
   align-items: center;
@@ -966,7 +545,6 @@ main {
   box-shadow: 0 0 6px #00000024;
   background-color: var(--white-bg-color);
 }
-
 .modal .form {
   width: 100%;
   display: flex;
@@ -974,11 +552,9 @@ main {
   align-items: center;
   justify-content: center;
 }
-
 .modal .form .title {
   font-size: 15px;
 }
-
 .page-form {
   max-width: 340px;
   width: 100%;
@@ -987,7 +563,6 @@ main {
   box-shadow: 0px 0px 6px 0px #00000024;
   background-color: var(--white-bg-color);
 }
-
 .page-form .form {
   width: 100%;
   display: flex;
@@ -995,7 +570,6 @@ main {
   align-items: center;
   justify-content: center;
 }
-
 .page-form .title {
   font-size: 20px;
   line-height: 20px;
@@ -1003,7 +577,6 @@ main {
   margin: 0;
   margin-bottom: 40px;
 }
-
 .page-form .inputs {
   margin-bottom: 40px;
   width: 100%;
@@ -1012,13 +585,11 @@ main {
   align-items: center;
   justify-content: center;
 }
-
 .profile-input {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
-
 .profile-input .input-label {
   font-size: 13px;
   line-height: 13px;
@@ -1026,7 +597,6 @@ main {
   color: var(--black-color);  
   flex-shrink: 0;
 }
-
 .profile-input .input-field {
   height: 32px;
   font-size: 13px;
@@ -1034,21 +604,18 @@ main {
   text-align: right;
   color: var(--dark-gray-color);  
 }
-
 .profile-input .input-field::-moz-placeholder {
   font-size: 13px;
   line-height: 13px;
   text-align: right;
   color: var(--dark-gray-color);  
 }
-
 .profile-input .input-field::placeholder {
   font-size: 13px;
   line-height: 13px;
   text-align: right;
   color: var(--dark-gray-color);  
 }
-
 .search-input {
   height: 32px;
   width: 100%;
@@ -1061,17 +628,14 @@ main {
   border: none;
   outline: none;
 }
-
 .search-input:placeholder {
   font-size: 12px;
   line-height: 12px;
   color: var(--dark-gray-color);
 }
-
 .timestamp {
   color: var(--dark-gray-color);
 }
-
 .chat-page {
   width: 100%;
   height: 100%;
@@ -1080,7 +644,6 @@ main {
   grid-template-columns: 310px 1fr;
   grid-template-rows: 100%;
 }
-
 .error-page {
   height: 100%;
   display: flex;
@@ -1088,14 +651,12 @@ main {
   align-items: center;
   justify-content: center;
 }
-
 .login-page {
   display: flex;
   align-items: center;
   justify-content: center;
   height: 100%;
 }
-
 .non-found-page {
   height: 100%;
   display: flex;
@@ -1103,7 +664,6 @@ main {
   align-items: center;
   justify-content: center;
 }
-
 .profile-page {
   width: 100%;
   height: 100%;
@@ -1113,7 +673,6 @@ main {
   grid-template-columns: 64px 1fr;
   grid-template-rows: 100%;
 }
-
 .profile-page .navigation {
   display: flex;
   align-items: center;
@@ -1121,7 +680,6 @@ main {
   background-color: var(--light-gray-bg-color);
   border-right: 1px solid var(--light-gray-color);
 }
-
 .profile {
   display: flex;
   flex-direction: column;
@@ -1131,7 +689,6 @@ main {
   margin: 0 auto;
   padding-top: 60px;
 }
-
 .profile .avatar-wrapper {
   width: 130px;
   height: 130px;
@@ -1141,7 +698,6 @@ main {
 
   position: relative;
 }
-
 .profile .avatar {
   width: 130px;
   height: 130px;
@@ -1151,7 +707,6 @@ main {
   background-position: center center;
   cursor: pointer;
 }
-
 .profile .avatar-hover {
   display: none;
   position: absolute;
@@ -1169,7 +724,6 @@ main {
   background-color: rgba(0, 0, 0, 0.5);
   color: var(--white-color);
 }
-
 .profile .name {
   font-size: 16px;
   font-weight: 600;
@@ -1178,40 +732,32 @@ main {
 
   margin-bottom: 60px;
 }
-
 .profile .info {
   width: 100%;
   margin-bottom: 60px;
 }
-
 .profile .info .input-field {
   cursor: default;
 }
-
 .profile .info > :not(:last-child) {
   border-bottom: 1px solid var(--light-gray-color);
 }
-
 .profile .buttons {
   width: 100%;
   display: flex;
   flex-direction: column;
 }
-
 .profile .buttons .button-link {
   justify-content: flex-start;
   font-size: 13px;
   line-height: 13px;
 }
-
 .profile .buttons .button-link:last-child {
   color: var(--red-color);
 }
-
 .profile .buttons > :not(:last-child) {
   border-bottom: 1px solid var(--light-gray-color);
 }
-
 .signup-page {
   display: flex;
   align-items: center;
