--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -10,5 +10,5 @@
   --light-gray-color: #EAEAEA;
   --blue-color: #3369F3;
   --red-color: #FF2F2F;
-  --white-color: #FFFFFF;
+  --white-color: #FFF;
 }
