--- a/src/styles/components/chats.css
+++ b/src/styles/components/chats.css
@@ -9,7 +9,7 @@
 .chats .top-bar {
   display: flex;
   flex-direction: column;
-  padding: 10px 0 14px 0;
+  padding: 10px 0 14px;
 }
 
 .chats .profile-link {
@@ -32,7 +32,7 @@
   top: 50%;
   right: 0;
   transform: translateY(-50%);
-  background-image: url(../icons/profile-link-icon.svg);
+  background-image: "url(../icons/profile-link-icon.svg)";
   background-position: center center;
   background-size: cover;
 }
