--- a/src/styles/components/modal.css
+++ b/src/styles/components/modal.css
@@ -7,7 +7,7 @@
   display: none;
   align-items: center;
   justify-content: center;
-  background: rgba(0, 0, 0, 0.4);
+  background-color: rgba(0, 0, 0 / 40%);
 }
 
 .modal-content {
