--- a/src/styles/components/page-form.css
+++ b/src/styles/components/page-form.css
@@ -3,7 +3,7 @@
   width: 100%;
   padding: 50px 30px 30px;
   border-radius: 12px;
-  box-shadow: 0px 0px 6px 0px #00000024;
+  box-shadow: 0 0 6px 0 #00000024;
   background-color: var(--white-bg-color);
 }
 
