--- a/src/styles/components/search-input.css
+++ b/src/styles/components/search-input.css
@@ -10,8 +10,8 @@
   outline: none;
 }
 
-.search-input:placeholder {
+/* .search-input:placeholder {
   font-size: 12px;
   line-height: 12px;
   color: var(--dark-gray-color);
-}
+} */
