--- a/src/styles/pages/profile-page.css
+++ b/src/styles/pages/profile-page.css
@@ -37,7 +37,7 @@
 .profile .avatar {
   width: 130px;
   height: 130px;
-  background-image: url(../icons/avatar-icon.svg);
+  background-image: "url(../icons/avatar-icon.svg)";
   background-repeat: no-repeat;
   background-position: center center;
   cursor: pointer;
@@ -56,8 +56,7 @@
   font-size: 13px;
   line-height: 14px;
   text-align: center;
-  background-color: rgba(0, 0, 0, 0.5);
-  color: var(--white-color);
+  background-color: rgba(0, 0, 0 / 50%);
 }
 
 .profile .name {
