--- a/src/styles/settings.css
+++ b/src/styles/settings.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: "Inter";
+  font-family: Inter;
   src:
     url("../fonts/Inter/Inter_18pt-Regular.woff2") format("woff2"),
     url("../fonts/Inter/Inter_18pt-Regular.woff") format("woff"),
@@ -10,7 +10,7 @@
 }
 
 @font-face {
-  font-family: "Inter";
+  font-family: Inter;
   src:
     url("../fonts/Inter/Inter_18pt-Medium.woff2") format("woff2"),
     url("../fonts/Inter/Inter_18pt-Medium.woff") format("woff"),
@@ -21,7 +21,7 @@
 }
 
 @font-face {
-  font-family: "Inter";
+  font-family: Inter;
   src:
     url("../fonts/Inter/Inter_18pt-SemiBold.woff2") format("woff2"),
     url("../fonts/Inter/Inter_18pt-SemiBold.woff") format("woff"),
@@ -69,7 +69,7 @@ button {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  font-family: "Inter", sans-serif;
+  font-family: Inter, sans-serif;
   font-weight: 500;
   color: var(--black-color);
   background-color: var(--white-bg-color);
