--- a/src/styles/pages/profile-page.css
+++ b/src/styles/pages/profile-page.css
@@ -37,7 +37,7 @@
 .profile .avatar {
   width: 130px;
   height: 130px;
-  background-image: "url(../icons/avatar-icon.svg)";
+  background-image: url("../icons/avatar-icon.svg");
   background-repeat: no-repeat;
   background-position: center center;
   cursor: pointer;
