--- a/src/styles/components/button.css
+++ b/src/styles/components/button.css
@@ -31,7 +31,7 @@
   width: 28px;
   border-radius: 50%;
   background-color: var(--blue-bg-color);
-  background-image: "url(../icons/button-back.svg)";
+  background-image: url("../icons/button-back.svg");
   background-position: center center;
   background-size: auto;
   background-repeat: no-repeat;
@@ -42,7 +42,7 @@
   width: 28px;
   border-radius: 50%;
   background-color: var(--blue-bg-color);
-  background-image: "url(../icons/button-send-icon.svg)";
+  background-image: url("../icons/button-send-icon.svg");
   background-position: center center;
   background-size: auto;
   background-repeat: no-repeat;
