--- a/src/styles/components/chats.css
+++ b/src/styles/components/chats.css
@@ -32,7 +32,7 @@
   top: 50%;
   right: 0;
   transform: translateY(-50%);
-  background-image: "url(../icons/profile-link-icon.svg)";
+  background-image: url("../icons/profile-link-icon.svg");
   background-position: center center;
   background-size: cover;
 }
