--- a/src/styles/components/button.css
+++ b/src/styles/components/button.css
@@ -47,3 +47,15 @@
   background-size: auto;
   background-repeat: no-repeat;
 }
+
+.button-add {
+    color: var(--dark-gray-color);
+    font-size: 12px;
+    line-height: 12px;
+    background: transparent;
+    margin-top: 10px;
+}
+
+.button-delete {
+
+}
