--- a/src/styles/components/chat-feed.css
+++ b/src/styles/components/chat-feed.css
@@ -10,6 +10,7 @@
   align-items: center;
   padding: 10px 0;
   border-bottom: 1px solid var(--light-gray-color);
+  position: relative;
 }
 
 .chat-feed .top-bar .info {
@@ -40,7 +41,7 @@
   background-repeat: no-repeat;
 }
 
-.chat-feed .top-bar .actions .frame {
+.chat-feed .top-bar .frame {
   position: absolute;
   right: -10px;
   top: 40px;
