--- a/src/styles/components/avatar.css
+++ b/src/styles/components/avatar.css
@@ -4,3 +4,9 @@
   border-radius: 50%;
   background-color: var(--gray-color);
 }
+
+.avatar img {
+    width: 130px;
+    height: 130px;
+    border-radius: 50%;
+}
